# AMR-Warehouse-System

./: .gitignore  README.md  amr_open_loop.ino
docs/setup-notes/: ros2-laptop-install.md
firmware/.claude/: settings.local.json
firmware/line_follower_pid/: line_follower_pid.ino
ros2_ws/src/amr_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/amr_bringup/launch/: bringup.launch.py
ros2_ws/src/amr_description/: CMakeLists.txt  package.xml
ros2_ws/src/amr_description/launch/: display.launch.py  launch_sim.launch.py
ros2_ws/src/amr_description/rviz/: display.rviz
ros2_ws/src/amr_description/urdf/: amr_robot.urdf.xacro  gazebo_control.xacro
ros2_ws/src/amr_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/amr_navigation/config/: mapper_params_online_async.yaml
ros2_ws/src/amr_navigation/launch/: slam.launch.py
ros2_ws/src/amr_vision/: package.xml  setup.py
